# bargainbuddy

./: README.md
.github/workflows/: django.yml
bargainbuddy/: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
bargainbuddy/.github/workflows/: django.yml
bargainbuddy/bargainbuddy/: asgi.py  settings.py  wsgi.py
bargainbuddy/conversation/migrations/: 0001_initial.py
bargainbuddy/core/: tests.py  urls.py  views.py
bargainbuddy/core/static/core/css/: custom.css
bargainbuddy/core/static/core/js/: custom.js
bargainbuddy/core/templates/core/: base.html  contact.html  index.html  login.html  signup.html
bargainbuddy/dashboard/templates/dashboard/: index.html
bargainbuddy/item/: admin.py  forms.py  models.py  urls.py  views.py
bargainbuddy/item/migrations/: 0001_initial.py  0002_alter_category_options_item.py  0003_alter_item_image.py  0004_item_approval_status.py  0005_alter_item_approval_status.py
bargainbuddy/item/templates/item/: detail.html  items.html
bargainbuddy/static_root/core/css/: custom.css
